--- a/projecto mascote android/Copia.html
+++ b/projecto mascote android/Copia.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Surgimento da mascote do android</title>
+    <title>Mudando a cor do site</title>
     <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="android.css">
+    <link rel="stylesheet" href="Copia.css">
 </head>
 <body>
     <header>
