--- a/projecto mascote android/android.html
+++ b/projecto mascote android/android.html
@@ -79,7 +79,7 @@
 </main>
          
 <footer>
-Site criado por: Kelmo Adriano da Silva
+Site feito por: Kelmo Adriano da Silva
 </footer>
 </body>
 </html>
